tests/EtaX/EtaX.meth/EtaX.meth.07.check
// 2.13-base exitCode: 1   val t3f: Any       = meth() _               // error: _ must follow method
/d/shisa/target/tests/EtaX/EtaX.meth/EtaX.meth/EtaX.meth.07.scala:16: error: _ must follow method; cannot follow String
  val t3f: Any       = meth() _               // error: _ must follow method
                           ^
one error found
// 2.13-head exitCode: 1   val t3f: Any       = meth() _               // error: _ must follow method
/d/shisa/target/tests/EtaX/EtaX.meth/EtaX.meth/EtaX.meth.07.scala:16: error: _ must follow method; cannot follow String
  val t3f: Any       = meth() _               // error: _ must follow method
                           ^
1 error
// 2.13-new exitCode: 1   val t3f: Any       = meth() _               // error: _ must follow method
/d/shisa/target/tests/EtaX/EtaX.meth/EtaX.meth/EtaX.meth.07.scala:16: error: _ must follow method; cannot follow String
  val t3f: Any       = meth() _               // error: _ must follow method
                           ^
1 error
// 3.0-old exitCode: 0   val t3f: Any       = meth() _               // error: _ must follow method
-- [E099] Syntax Migration Warning: /d/shisa/target/tests/EtaX/EtaX.meth/EtaX.meth/EtaX.meth.07.scala:16:30 
16 |  val t3f: Any       = meth() _               // error: _ must follow method
   |                       ^^^^^^^^
   |Only function types can be followed by _ but the current expression has type String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 warning found
// 3.0 exitCode: 1   val t3f: Any       = meth() _               // error: _ must follow method
-- [E099] Syntax Error: /d/shisa/target/tests/EtaX/EtaX.meth/EtaX.meth/EtaX.meth.07.scala:16:30 
16 |  val t3f: Any       = meth() _               // error: _ must follow method
   |                       ^^^^^^^^
   |Only function types can be followed by _ but the current expression has type String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 error found
// 3.1 exitCode: 1   val t3f: Any       = meth() _               // error: _ must follow method
-- [E099] Syntax Error: /d/shisa/target/tests/EtaX/EtaX.meth/EtaX.meth/EtaX.meth.07.scala:16:30 
16 |  val t3f: Any       = meth() _               // error: _ must follow method
   |                       ^^^^^^^^
   |Only function types can be followed by _ but the current expression has type String

Explanation
===========
The syntax x _ is no longer supported if x is not a function.
To convert to a function value, you need to explicitly write () => x

1 error found
